--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PetPalsy</title>
+
+    <!-- favicon -->
+    <link rel="Icon" href="images/Frame_3.png">
+
 </head>
 
     <!-- link goggle fonts -->
@@ -39,7 +43,7 @@
                 <li><a id="li2" href="#pricing">Pricing</a></li>
                 <li><a id="li3" href="#gallery">Gallery</a></li>
                 <li><a id="li4" href="#">Contact Us</a></li>
-                <li><a href="#" id="register">Register Now</a></li>
+                <li><a href="Signup.html" id="register">Register Now</a></li>
             </ul>
         </div>
     </menu>
@@ -62,7 +66,7 @@
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#" id="register">Register Now</a></li>
+                    <li><a href="Signup.html" id="register">Register Now</a></li>
                 </ul>
             </div>
         </div>
