--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PetPalsy</title>
 
     <!-- favicon -->
-    <link rel="Icon" href="images/Frame_3.png">
+    <link rel="shortcut Icon" href="images/Frame_3.png">
 
 </head>
 
