--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetPalsy</title>
 
-    <!-- favicon -->
+    <!-- favicon--------------------- -->
     <link rel="shortcut Icon" href="images/Frame_3.png">
 
 </head>
 
-    <!-- link goggle fonts -->
+    <!-- link goggle fonts----------------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
@@ -19,20 +19,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 
-    <!-- link bootstrap===== -->
+    <!-- link bootstrap--------------------- -->
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/jquery-3.5.1.min.js">
     <link rel="stylesheet" href="bootstrap/popper.min.js">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.js">
 
-    <!-- link style sheet -->
+    <!-- link style sheet------------------ -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- link boxicon -->
+    <!-- link boxicon---------------------- -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <body id="home">
-    <!-- menu -->
+    <!-- menu======================== -->
     <menu>
         <i class='bx bx-x' id="close-menu"></i>
         <div class="menu-nav-link">
@@ -48,9 +48,9 @@
         </div>
     </menu>
 
-    <!-- hero -->
+    <!-- hero========================= -->
     <div class="hero">
-        <!-- nav bar -->
+        <!-- nav bar========================= -->
         <div class="nav">
             <div class="nav-logo">
                 <a href="index.html"><img src="images/Logo.png" alt="pet logo"></a>
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <!-- content -->
+        <!-- content======================== -->
         <div class="container">
             <div class="content">
                     <p id="p">Treating Your Pet <br> <b>By Our Professional</b> <br>Vets</p>
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <!-- About -->
+    <!-- About================================== -->
     <div class="about" id="about">
         <div class="about-img">
             <img src="images/vector (2).jpg" alt="about image">
@@ -124,7 +124,7 @@
         </div>
     </div>
 
-    <!-- services -->
+    <!-- services======================== -->
     <div class="services" id="services">
         <center>
             <div class="services-header">
@@ -187,7 +187,7 @@
         </div>
     </div>
 
-    <!-- stats -->
+    <!-- stats=========================== -->
     <div class="stats">
         <div class="stats-box">
             <center><div><img src="images/clipboard.jpg" alt=""></div></center>
@@ -211,7 +211,7 @@
         </div>
     </div>
 
-    <!-- Gallery -->
+    <!-- Gallery============================ -->
     <div class="main-gallery" id="gallery">
         <center>
             <div class="gallery-header">
@@ -244,7 +244,7 @@
         </div>
     </div>
 
-    <!-- pricing -->
+    <!-- pricing============================= -->
     <div class="pricing" id="pricing">
         <center>
             <div class="pricing-header">
@@ -323,7 +323,7 @@
         </div>
     </div>
 
-    <!-- grooming -->
+    <!-- grooming========================= -->
     <div class="grooming">
         <div class="grooming-img">
             <img src="images/dog_3.png" alt="">
@@ -334,7 +334,7 @@
         </div>
     </div>
 
-    <!-- Testimonial -->
+    <!-- Testimonial========================= -->
     <!-- <div class="testimonial">
         <center>
             <div class="testimonial-header">
@@ -403,7 +403,7 @@
         </div>
     </div> -->
 
-    <!-- Team members -->
+    <!-- Team members=================== -->
     <div class="team">
         <center>
             <div class="team-header">
@@ -436,7 +436,7 @@
         </div>
     </div>
 
-    <!-- question -->
+    <!-- question==================== -->
     <div class="question">
         <div class="question-content">
             <p>Post Your Questions <br> <b>Our Expart Ready to Answer</b></p>
@@ -467,7 +467,7 @@
         </div>
     </div>
 
-    <!-- footer -->
+    <!-- footer======================== -->
     <footer>
         <div class="footer-content-one">
             <h3>Haldaa</h3>
@@ -513,12 +513,14 @@
         </div>
     </footer>
 
-    <!-- copy-right -->
+    <!-- copy-right================= -->
     <hr id="hr">
     <div class="copy-right">
         <h5>&copy;<span id="get-year">XXXX</span> Haldaa all Right Reserved by pixiansstudiouiux</h5>
     </div>
-    <!-- link script -->
+
+    <!-- link script--------------------- -->
     <script src="Js/script.js"></script>
+    
 </body>
 </html>
