--- a/Signup.html
+++ b/Signup.html
@@ -24,30 +24,35 @@
         <h2>PetPalsy</h2>
       </div>
       <div class="right">
-        <form id="form" class="form">
+        <form id="form" class="form" onsubmit="return checkme(event)">
           <div class="title">
             <h2>Register</h2>
             <p>Sign Up to access your dashboard</p>
           </div>
           <div class="input-card">
             <label>Full Name</label>
-            <input type="text" placeholder="Full Name" />
+            <input type="text" placeholder="Full Name" id="fullname" onkeyup="clearFullErrorMessage()"/>
+            <div id="full-error-message" class="error-message"></div>
           </div>
           <div class="input-card">
             <label>User Name</label>
-            <input type="text" placeholder="User Name" />
+            <input type="text" placeholder="User Name" id="username" onkeyup="clearUserErrorMessage()"/>
+            <div id="user-error-message" class="error-message"></div>
           </div>
           <div class="input-card">
             <label>Email address</label>
-            <input type="email" placeholder="Email" />
+            <input type="email" placeholder="Email" id="email" onkeyup="clearEmailErrorMessage()"/>
+            <div id="email-error-message" class="error-message"></div>
           </div>
           <div class="input-card">
             <label>Phone</label>
-            <input type="text" placeholder="Phone Number" />
+            <input type="text" placeholder="Phone Number" id="phone" onkeyup="clearPhoneErrorMessage()"/>
+            <div id="phone-error-message" class="error-message"></div>
           </div>
           <div class="input-card">
             <label>Password</label>
-            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Password" id="pwd" onkeyup="clearPwdErrorMessage()"/>
+            <div id="pwd-error-message" class="error-message"></div>
           </div>
           <div class="register">
             <p>Already have an account? <a href="login.html">Sign In</a></p>
@@ -59,6 +64,6 @@
         </form>
       </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="Js/formValidation.js"></script>
   </body>
 </html>
