--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
         <h2>PetPalsy</h2>
       </div>
       <div class="right">
+        <div class="loginsuc"><p id="pmsg">Login successfully!!</p></div>
         <form id="form" class="form" onsubmit="return checklogin(event)">
           <div class="title">
             <h2>Sign in</h2>
@@ -42,7 +43,7 @@
           <div class="register">
             <p>Don't have an account? <a href="Signup.html">Register</a></p>
           </div>
-          <button type="submit">login</button>
+          <button type="submit" id="submit">login</button>
           <div class="forgot-password">
             <p>Forgot Password? <a href="#">Click here</a></p>
           </div>
