--- a/Signup.html
+++ b/Signup.html
@@ -25,7 +25,7 @@
   <body>
     <div class="hero">
       <div class="left">
-        <h2>PetPalsy</h2>
+        <h2>PetPalsy Hello</h2>
       </div>
       <div class="right">
         <div class="suc">
