animate landing page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <!-- link boxicon---------------------- -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 <body id="home">
     <!-- menu======================== -->
     <menu>
@@ -51,7 +55,7 @@
     <!-- hero========================= -->
     <div class="hero">
         <!-- nav bar========================= -->
-        <div class="nav">
+        <div class="nav animate__animated animate__fadeInLeft">
             <div class="nav-logo">
                 <a href="index.html"><img src="images/Logo.png" alt="pet logo"></a>
             </div>
@@ -72,7 +76,7 @@
         </div>
 
         <!-- content======================== -->
-        <div class="container">
+        <div class="container animate__animated animate__fadeInLeft">
             <div class="content">
                     <p id="p">Treating Your Pet <br> <b>By Our Professional</b> <br>Vets</p>
                     <p id="pp">Conveniently customize proactive web services for leveraged without continualliery aggregate fricctionle ou wellies richard.and very customize continually.</p>
